--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+body {
+    display: grid;
+}
+
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 8fr 1fr;
     max-height: auto;
     max-width: 960px;
     font-family: 'Open Sans', sans-serif;
@@ -11,6 +15,27 @@
     margin: auto;
 }
 
+@media (max-width: 767px) {
+
+    .wrapper {
+        display: block;
+    }
+
+    .sidebar {
+        align-items: center;
+    }
+
+    .contact {
+        text-align: center;
+    }
+
+    img {
+        margin: 0;
+    }
+
+}
+
+
 hr {
     border: solid;
     width: auto;
@@ -19,26 +44,6 @@ hr {
     height: 1px;
     margin-bottom: 20px;
 
-}
-
-.header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    grid-column-start: 2;
-    grid-column-end: 6;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-.name-line {
-    display: block;
-    width: 100px;
-    height: 3px;
-    border-radius: 25%;
-    background-color: #000;
 }
 
 
@@ -72,10 +77,29 @@ h3 {
     margin: 10px 0 0 5px;
 }
 
+/* ======================= HEADER ========================= */
+
+.header {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.name-line {
+    display: block;
+    width: 100px;
+    height: 3px;
+    border-radius: 25%;
+    background-color: #000;
+}
+
+
 /* ======================= SIDEBAR ========================= */
 
 .sidebar {
-    grid-area: 1 / 1 / 9 /2;
+    grid-area: 1 / 1 / 4 / 2;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -147,7 +171,9 @@ i {
 /* =======================  MAIN  ========================= */
 
 .main {
-    grid-area: 2 / 2 / 9 / 6;
+    grid-area: 2 / 2 / 3 / 3;
+    display: flex;
+    flex-direction: column;
     font-size: 12px;
     padding: 40px;
 }
@@ -167,7 +193,6 @@ i {
 .list-item {
     display: flex;
     flex-direction: row;
-
 }
 
 .data-range {
@@ -198,7 +223,7 @@ i {
 /* ==================== FOOTER ========================= */
 
 .footer {
-    grid-area: 9 / 1 / 10 / 6;
+    grid-area: 3 / 1 / 4 / 3;
     display: flex;
     justify-content: center;
     align-items: end;
