--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
         border-top: 1px solid;
     }
 
+    img {
+        width: 15rem;
+    }
+
     .contact {
         text-align: center;
     }
@@ -67,6 +71,36 @@ body {
 
     input:checked~.education-div {
         height: max-content;
+    }
+
+    .contact-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact-info h3 {
+        margin-bottom: 15px;
+    }
+
+    .contact-info p {
+        margin: 10px 0;
+    }
+
+    .contact-portfolio {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 32px;
+    }
+
+    .fa-brands,
+    .fab {
+        margin: 0 0.74em;
+    }
+
+    .contact-portfolio-label {
+        display: none;
     }
 }
 
